force-app/main/default/objects/NationalityApi__mdt/NationalityApi__mdt.object-meta.xml
<CustomObject>
    <label>NationalityApi</label>
    <pluralLabel>NationalityApis</pluralLabel>
</CustomObject>