force-app/main/default/objects/NationalityApi__mdt/fields/CountryShortCode__c.field-meta.xml
<CustomField>
    <fullName>CountryShortCode__c</fullName>
    <label>CountryShortCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>