force-app/main/default/objects/NationalityApi__mdt/fields/Flag_Icon__c.field-meta.xml
<CustomField>
    <fullName>Flag_Icon__c</fullName>
    <label>Flag Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>